--- a/css/agency.css
+++ b/css/agency.css
@@ -115,7 +115,7 @@ img::-moz-selection {
   font-size: 12px;
   right: 0;
   padding: 13px;
-  text-transform: uppercase;
+  text-transform: none;
   color: white;
   border: 0;
   background-color: #fed136;
